# net-python-sk-aca

./: .gitignore  .sln  AZD-DEPLOYMENT.md  BUILD-NOTES.md  README.md  azure.yaml  docker-compose.yml  net-python-sk-aca.code-workspace
.github/: copilot-instructions.md
infra/: .gitignore  DEPLOYMENT.md  README.md  deploy-images.sh  main.tf  main.tfvars.json  outputs.tf  provider.conf.json  variables.tf  versions.tf
infra/modules/acr/: main.tf  outputs.tf  variables.tf
infra/modules/ai-foundry/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/ai-project/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/ai-storage/: main.tf  outputs.tf  variables.tf
src/: .dockerignore
src/ai-service/: .dockerignore  .env.example  Dockerfile  README.md  TESTING.md  main.py  pyproject.toml  test.http
src/ai-service/app/: __init__.py
src/ai-service/app/core/: config.py  dependencies.py  lifespan.py  telemetry.py  tracing.py
src/ai-service/app/models/: __init__.py  chat.py  converters.py
src/ai-service/app/plugins/: __init__.py  weather.py
src/ai-service/app/routers/: chat.py  health.py
src/ai-service/app/services/: agent.py
src/ai-service/docs/: APPLICATION_INSIGHTS.md
src/backend/: .dockerignore  Backend.csproj  Dockerfile  Dockerfile.dockerignore  Program.cs  README.md  appsettings.Development.json  appsettings.json  test.http
src/frontend/: package-lock.json  package.json
src/frontend/src/: Chat.css  (+2 more)
src/weather-function/: .dockerignore  Dockerfile  README.md  function_app.py  host.json  pyproject.toml  requirements.txt  test.http
(+33 files in other folders)
